--- a/src/main/java/com/iglnierod/gamearchive/view/home/community/ActivityPanel.form
+++ b/src/main/java/com/iglnierod/gamearchive/view/home/community/ActivityPanel.form
@@ -101,6 +101,9 @@
           <Font name="Liberation Sans" size="15" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="&lt;username&gt;"/>
+        <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+          <Color id="Hand Cursor"/>
+        </Property>
       </Properties>
     </Component>
   </SubComponents>
