--- a/src/main/java/com/iglnierod/gamearchive/view/home/list/dialog/ListDialog.form
+++ b/src/main/java/com/iglnierod/gamearchive/view/home/list/dialog/ListDialog.form
@@ -39,6 +39,14 @@
                 <Property name="text" type="java.lang.String" value="Export"/>
               </Properties>
             </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="importMenuItem">
+              <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/icons/import_24dp.png"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Import"/>
+              </Properties>
+            </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="deleteMenuItem">
               <Properties>
                 <Property name="accelerator" type="javax.swing.KeyStroke" editor="org.netbeans.modules.form.editors.KeyStrokeEditor">
