--- a/src/main/java/com/iglnierod/gamearchive/view/game/rate/RateGameDialog.form
+++ b/src/main/java/com/iglnierod/gamearchive/view/game/rate/RateGameDialog.form
@@ -84,7 +84,7 @@
   <SubComponents>
     <Component class="javax.swing.JButton" name="cancelButton">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Calcel"/>
+        <Property name="text" type="java.lang.String" value="Cancel"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="titleLabel">
